Fix scrollbar et data change color

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     --color-primary-background: #c1d1d6;
     --color-secondary-background: #d4dfe2;
     --color-tertiary-background: #fff9f1;
+    --color-forth-background: #acc0c7;
     --colo-primary-shadow: rgb(136, 131, 130);
     --color-primary-text: #111;
     --color-secondary-text: #222;
@@ -16,6 +17,7 @@
     --color-primary-background: #13163b;
     --color-secondary-background: #1e2155;
     --color-tertiary-background: #0c0f2e;
+    --color-forth-background: #20224e;
     --colo-primary-shadow: #7175be;
     --color-primary-text: #eee;
     --color-secondary-text: #ddd;
@@ -28,9 +30,22 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--color-tertiary-background);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--color-forth-background);
+    border-radius: 4px;
+}
+
 html, body {
     margin: 0;
-    /* font-family: Inter, sans-serif; */
     font-family: 'Ubuntu';
 }
 
@@ -41,20 +56,6 @@ h1, h2, h3, h4, h5, h6 {
 .App {
     background: linear-gradient(to bottom, var(--color-primary-background) 50%, var(--color-secondary-background) 50%);
     padding: 0 5%;
-}
-
-::-webkit-scrollbar {
-    width: 7px;
-    height: 7px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: #999;
-    padding: 1px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #343997;
 }
 
 .block {
